<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingVertical="16dp"
    android:paddingHorizontal="16dp"
    android:background="@color/app_comida_mascotas_background"
    tools:context=".AppActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <androidx.cardview.widget.CardView
            android:id="@+id/cvDog"
            android:layout_marginHorizontal="8dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:cardCornerRadius="7dp"
            app:cardBackgroundColor="@color/app_comida_mascotas_cardview">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingVertical="8dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/dog"
                    android:textColor="@color/app_comida_mascotas_text"
                    android:textSize="30dp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="70dp"
                    android:src="@drawable/dog"
                    app:tint="@color/app_comida_mascotas_text" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cvCat"
            android:layout_marginHorizontal="8dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:cardCornerRadius="7dp"
            app:cardBackgroundColor="@color/app_comida_mascotas_cardview">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingVertical="8dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/cat"
                    android:textColor="@color/app_comida_mascotas_text"
                    android:textSize="30dp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="70dp"
                    android:src="@drawable/cat"
                    app:tint="@color/app_comida_mascotas_text" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>
    <androidx.cardview.widget.CardView
        android:id="@+id/cvSliderWeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="7dp"
        android:layout_marginVertical="16dp"
        android:layout_marginHorizontal="8dp"
        app:cardBackgroundColor="@color/app_comida_mascotas_cardview">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="3">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/weight"
                android:textAlignment="center"
                android:textColor="@color/app_comida_mascotas_text"
                android:textAllCaps="true"
                android:textSize="25dp" />

            <TextView
                android:id="@+id/tvWeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/defaultValueWeight"
                android:textSize="25dp"
                android:textColor="@color/app_comida_mascotas_text" />

            <com.google.android.material.slider.RangeSlider
                android:id="@+id/rsWeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:valueFrom="1"
                android:valueTo="70"
                android:stepSize="1"
                />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginVertical="8dp"
        app:cardBackgroundColor="@color/app_comida_mascotas_cardview"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/age"
            android:textAlignment="center"
            android:textSize="26dp"
            android:textAllCaps="true"
            android:textColor="@color/app_comida_mascotas_text"
            />
        <TextView
            android:id="@+id/tvAge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/defaultAge"
            android:textAlignment="center"
            android:textSize="26dp"
            android:textAllCaps="true"
            android:textColor="@color/app_comida_mascotas_text"
            />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                >
            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fabDecrementAge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:src="@drawable/outline_check_indeterminate_small_24"
                />
            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fabAddAge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:src="@drawable/baseline_add_24"
                />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/cvResult"
        android:layout_marginHorizontal="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        app:cardCornerRadius="7dp"
        app:cardBackgroundColor="@color/app_comida_mascotas_cardview">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingVertical="8dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/result"
                android:textColor="@color/app_comida_mascotas_text"
                android:textSize="30dp" />
            <TextView
                android:id="@+id/tvResult"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text=""
                android:textColor="@color/app_comida_mascotas_text"
                android:textSize="30dp" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>